--- a/interactive_map.ipynb
+++ b/interactive_map.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "d4583252",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "5c138a60",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "f477ad36",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "f315f00e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "bf0c9ebb",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "7d2aa8b6",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "28692bee",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
+   "id": "054c2ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed Facility Type Mapping (5 and 8 are Outside Pitch, 4 and 17 are Tennis)\n",
+    "def recalculate_diversity(row):\n",
+    "    type_str = str(row['Type_List_Inside'])\n",
+    "    if pd.isna(type_str) or type_str == \"\" or type_str == \"nan\":\n",
+    "        return 0\n",
+    "    \n",
+    "    codes = [x.strip() for x in type_str.split(',')]\n",
+    "    unique_categories = set()\n",
+    "    \n",
+    "    for c in codes:\n",
+    "        if c in ['5', '8']:\n",
+    "            unique_categories.add('Outside Pitch')\n",
+    "        elif c in ['4', '17']: \n",
+    "            unique_categories.add('Tennis')\n",
+    "        else:\n",
+    "            unique_categories.add(c)\n",
+    "            \n",
+    "    return len(unique_categories)\n",
+    "\n",
+    "# Sovrascrivi la colonna usata poi dalla mappa\n",
+    "gdf_final['Diversity_Index_Inside'] = gdf_final.apply(recalculate_diversity, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "5b7138c6",
    "metadata": {},
    "outputs": [
@@ -150,7 +180,7 @@
     "    return 2.5 # Diverse\n",
     "\n",
     "gdf_final['Football_Cat'] = gdf_final.apply(classify_football, axis=1)\n",
-    "gdf_final['Football_Label'] = gdf_final['Football_Cat'].map({0: \"No Facilities\", 1.5: \"MONO-FOOTBALL\", 2.5: \"Diverse\"})\n",
+    "gdf_final['Football_Label'] = gdf_final['Football_Cat'].map({0: \"No Facilities\", 1.5: \"Only Football\", 2.5: \"Diverse\"})\n",
     "\n",
     "print(f\"Data successfully loaded and processed. Total regions: {len(gdf_final)}\")"
    ]
@@ -165,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "b3ff69eb",
    "metadata": {},
    "outputs": [
@@ -206,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "389a3d67",
    "metadata": {},
    "outputs": [
@@ -220,17 +250,19 @@
    ],
    "source": [
     "# LAYER CREATION FUNCTION\n",
-    "def add_custom_layer(map_obj, data, column, title, color_scheme, show=False, is_categorical=False, clip_quantile=None):\n",
+    "def add_custom_layer(map_obj, data, column, title, color_scheme, show=False, is_categorical=False, clip_quantile=None, legend_title=None):\n",
+    "    caption_text = legend_title if legend_title else title\n",
+    "    \n",
     "    # 1. Colormap\n",
     "    if is_categorical:\n",
-    "        cmap = cm.StepColormap(['#f0f0f0', '#e31a1c', '#08519c'], vmin=0, vmax=3, index=[0, 0.9, 1.9, 3], caption=title)\n",
+    "        cmap = cm.StepColormap(['#f0f0f0', '#e31a1c', '#08519c'], vmin=0, vmax=3, index=[0, 0.9, 1.9, 3], caption=caption_text)\n",
     "    else:\n",
     "        min_val = data[column].min()\n",
     "        if clip_quantile:\n",
     "            max_val = data[column].quantile(clip_quantile)\n",
     "        else:\n",
     "            max_val = data[column].max()\n",
-    "        cmap = cm.LinearColormap(colors=color_scheme, vmin=min_val, vmax=max_val, caption=title)\n",
+    "        cmap = cm.LinearColormap(colors=color_scheme, vmin=min_val, vmax=max_val, caption=caption_text)\n",
     "    \n",
     "    map_obj.add_child(cmap)\n",
     "    \n",
@@ -268,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "a59936fd",
    "metadata": {},
    "outputs": [
@@ -285,8 +317,8 @@
     "df_sites = df_sites.dropna(subset=['Lat', 'Lon'])\n",
     "\n",
     "facility_map = {\n",
-    "    \"1\": \"Athletics\", \"2\": \"Gym\", \"4\": \"Tennis\", \"5\": \"Football\",\n",
-    "    \"6\": \"Sports Hall\", \"7\": \"Swimming Pool\", \"8\": \"Football\", \"9\": \"Golf\",\n",
+    "    \"1\": \"Athletics\", \"2\": \"Gym\", \"4\": \"Tennis\", \"5\": \"Outside Pitch\",\n",
+    "    \"6\": \"Sports Hall\", \"7\": \"Swimming Pool\", \"8\": \"Outside Pitch\", \"9\": \"Golf\",\n",
     "    \"10\": \"Ice Rinks\", \"11\": \"Ski Slope\", \"12\": \"Studios\", \"13\": \"Squash\",\n",
     "    \"17\": \"Tennis\", \"20\": \"Cycling\", \"33\": \"Gymnastics\"\n",
     "}\n",
@@ -315,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "e2d743da",
    "metadata": {},
    "outputs": [
@@ -339,7 +371,7 @@
     "                 ['#1a9641', '#a6d96a', '#ffffbf', '#fdae61', '#d7191c'], show=False)\n",
     "\n",
     "# 3. Gap\n",
-    "add_custom_layer(m, gdf_final, 'Gap_PCT', '3. Gender Gap (Active M - F)', \n",
+    "add_custom_layer(m, gdf_final, 'Gap_PCT', '3. Gender Play Gap (%)', \n",
     "                 ['#ffffb2', '#fecc5c', '#fd8d3c', '#f03b20', '#bd0026'], show=False)\n",
     "\n",
     "# 4. Facilities\n",
@@ -351,19 +383,21 @@
     "add_custom_layer(m, gdf_final, 'Diversity_Index_Inside', '5. Diversity Index', \n",
     "                 ['#fde725', '#5ec962', '#21918c', '#3b528b', '#440154'], show=False)\n",
     "\n",
-    "# 6. Deserts\n",
-    "add_custom_layer(m, gdf_final, 'Football_Cat', '6. Deserts: Gray=None | Red=Mono-Foot | Blue=Diverse', \n",
-    "                 None, show=False, is_categorical=True)\n",
+    "# 6. Facility Variety (Mono-Football vs Diverse)\n",
+    "add_custom_layer(m, gdf_final, 'Football_Cat', \n",
+    "                 title='6. Facility Variety',\n",
+    "                 legend_title='White = None, Red = Only Football, Blue = 2+ Types',\n",
+    "                 color_scheme=None, show=False, is_categorical=True)\n",
     "\n",
     "# 7. Sites Locations\n",
     "FastMarkerCluster(\n",
     "    data=site_data, callback=callback_js,\n",
-    "    name=\"7. Sports Sites Locations (Zoom in)\", show=False\n",
+    "    name=\"7. Sports Sites Locations\", show=False\n",
     ").add_to(m)\n",
     "\n",
     "tooltip = folium.features.GeoJsonTooltip(\n",
     "    fields=['MSOA21NM', 'Active_TXT', 'Inactive_TXT', 'Gap_TXT', 'Facilities_Inside', 'Diversity_Index_Inside', 'Football_Label'],\n",
-    "    aliases=['Zone:', 'Active:', 'Inactive:', 'Gap:', 'Facilities:', 'Diversity Idx:', 'Type:'],\n",
+    "    aliases=['Zone:', 'Active Adults:', 'Inactive Adults:', 'Gender Play Gap:', 'N. of Facilities:', 'Diversity Index:', 'Type:'],\n",
     "    style=(\"background-color: white; color: #333333; font-family: arial; font-size: 12px; padding: 10px; border: 1px solid gray;\")\n",
     ")\n",
     "\n",
@@ -381,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "id": "ae21b6f0",
    "metadata": {},
    "outputs": [
@@ -401,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "id": "852d3a62",
    "metadata": {},
    "outputs": [
@@ -448,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "id": "e5189908",
    "metadata": {},
    "outputs": [
@@ -476,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7a62cfe4",
    "metadata": {},
    "outputs": [],
@@ -485,7 +519,7 @@
     "trip_times = [10, 20, 30]  # in minutes\n",
     "travel_speed = 4.5  # walking speed in km/h\n",
     "\n",
-    "# Get coordinates for your place_names\n",
+    "# CHANGE NAME IF YOU WANT TO GENERETE ISOCHRONES FOR DIFFERENT MSOAS\n",
     "place_names = [\n",
     "    \"Kensington, London, UK\",\n",
     "    \"Newham, London, UK\",\n",
@@ -497,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "id": "eed2112f",
    "metadata": {},
    "outputs": [
@@ -512,8 +546,8 @@
    "source": [
     "# Facility type mapping\n",
     "facility_map = {\n",
-    "    \"1\": \"Athletics\", \"2\": \"Gym\", \"4\": \"Tennis\", \"5\": \"Football\",\n",
-    "    \"6\": \"Sports Hall\", \"7\": \"Swimming Pool\", \"8\": \"Football\", \"9\": \"Golf\",\n",
+    "    \"1\": \"Athletics\", \"2\": \"Gym\", \"4\": \"Tennis\", \"5\": \"Outside Pitch\",\n",
+    "    \"6\": \"Sports Hall\", \"7\": \"Swimming Pool\", \"8\": \"Outside Pitch\", \"9\": \"Golf\",\n",
     "    \"10\": \"Ice Rinks\", \"11\": \"Ski Slope\", \"12\": \"Studios\", \"13\": \"Squash\",\n",
     "    \"17\": \"Tennis\", \"20\": \"Cycling\", \"33\": \"Gymnastics\"\n",
     "}\n",
@@ -551,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "id": "06581544",
    "metadata": {},
    "outputs": [],
@@ -605,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "id": "34555aaa",
    "metadata": {},
    "outputs": [
@@ -613,7 +647,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating isochrones for Kensington, London, UK...\n",
+      "Calculating isochrones for Kensington, London, UK...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Calculating isochrones for Newham, London, UK...\n",
       "Calculating isochrones for City of London, UK...\n",
       "Calculating isochrones for Croydon, London, UK...\n",
@@ -643,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "f94ddbea",
    "metadata": {},
    "outputs": [],
@@ -686,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "a674080f",
    "metadata": {},
    "outputs": [
@@ -715,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "8dede2fc",
    "metadata": {},
    "outputs": [],
@@ -838,7 +878,7 @@
     "        </tr>\n",
     "        '''.format(place_name)\n",
     "        \n",
-    "        for _, row in counts_df.iterrows():\n",
+    "        for _, row in counts_df.sort_values(by='trip_time', ascending=True).iterrows():\n",
     "            legend_html += f'''\n",
     "            <tr style=\"border-bottom: 1px solid #eee;\">\n",
     "                <td style=\"padding:5px\">{int(row[\"trip_time\"])}</td>\n",
@@ -855,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "id": "44489798",
    "metadata": {},
    "outputs": [
